# erpc

./: .gitignore  CMakeLists.txt  build.sh
erpc_c/config/: erpc_config.h
erpc_c/infra/: erpc_client_manager.cpp  erpc_client_manager.h  erpc_common.h  erpc_framed_transport.cpp
erpc_c/setup/: erpc_mbf_setup.h  erpc_setup_fifo.cpp  erpc_setup_mbf_static.cpp  erpc_setup_mbf_static_fixed.h  erpc_transport_setup.h
erpc_c/transports/: erpc_fifo_transport.cpp  erpc_fifo_transport.h
erpcgen/: CMakeLists.txt
erpcsniffer/: CMakeLists.txt
